# Ruse

./: .gitignore  CODE_OF_CONDUCT.md  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac
python/: coretest.py  cpu.c
src/: Makefile.am  Makefile.in  arr.c  arr.h  memuse.c  options.c  options.h  output.c  output.h  proc.c  proc.h  ruse.c  thread.c  thread.h
util/: Makefile.am  Makefile.in  do_task.c  do_task.h  options_multiproc.c  options_multiproc.h  options_omp.c  options_omp.h  ruse_multiproc.c  ruse_omp.c  ruseplot.py
